--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<a href="kikrokstream-1.0.zip">kikrokstream-1.0.zip</a>
+<a href="https://github.com/jrosari/jrosari.github.io/raw/master/kikrokstream-1.0.zip">kikrokstream-1.0.zip</a>
